Refactored changes suggested by lint